welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: not enough arguments for method isFacingTrail: (col: java.awt.Color)Boolean.
Unspecified value parameter col.
    if (isFacingTrail()) {
                     ^